data/derived/sp14/progs/unify/prog1954.ml.out
Characters 548-563:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type int * int
       Type int list is not compatible with type int 
